# cora

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  SECURITY.md  decisions.md  fix-and-commit-features-4-5.ps1  generate-justin-docs.py  pyproject.toml  rescue-git-and-ship-lex-tagging-2026-06-07.ps1  ship-kb-binary-index-2026-06-07.ps1  verify-lex-tagging-2026-06-07.ps1
.githooks/: pre-commit
_notes/: cascade-commit-2026-05-24-final.ps1  cascade-commit-2026-05-24.ps1  cascade-session-2026-05-28-security-activation.md  cascade-session-2026-05-28-security.md
data/: asana-email-sync-state.json  health-kb-baseline.json  hubspot-email-sync-pending.json  hubspot-email-sync-state.json  influencer_scan_watermarks.json  influencer_tracker.db  proactive-gaps-sent.jsonl
deployment/: META_SETUP_GUIDE.md  apollo-setup-chrome-agent-prompt.md  bootstrap-new-machine.md  check-windows-security.ps1  cora-watchdog.ps1  deploy-updates.ps1  disable-meeting-action-capture-2026-06-18.ps1  kb-rebuild.md  meta-setup-chrome-agent-prompt.md  recover-backlog-2026-06-08.ps1  remove-attachment-filer-task.ps1  remove-backup-task.ps1  remove-digest-task.ps1  remove-kb-sync-tasks.ps1  remove-linkedin-spy-task.ps1  remove-security-monitor-task.ps1  remove-windows-task.ps1  restagger-morning-tasks-2026-06-13.ps1  restart-cora.ps1  run-kb-hygiene-apply.ps1  runbook.md  setup-ai-visibility-task.ps1  setup-asana-hygiene-nudges-task.ps1  setup-attachment-filer-task.ps1  setup-autowrite-digest-task.ps1  setup-backup-task.ps1  setup-cashflow-pulse-task.ps1  setup-cashflow-snapshot-task.ps1  setup-channel-health-monitor-task.ps1  setup-compaction-task.ps1  (+68 more)
(+631 files in other folders)
