[project]
name = "cora"
version = "0.1.0"
description = "Entity-aware Slack Q&A bot for HJR workspace"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18",
    "anthropic>=0.49",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "google-auth>=2.30",
    "google-api-python-client>=2.140",
    # Phase 3 — Knowledge Base + RAG
    "openai>=1.50",          # embeddings via text-embedding-3-small
    "tiktoken>=0.7",         # token counting for chunker (cl100k_base encoding)
    "sqlite-vec>=0.1.6",     # vector search extension for sqlite
    "openpyxl>=3.1",         # xlsx parsing for inventory_client (Weekly Inventory Report)
    "pdfplumber>=0.10",      # PDF text extraction for drive_sweep connector
]

[project.scripts]
cora = "cora.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cora"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
